# grid-world

./: .gitignore  LICENSE  README.md  doodles.py  pyproject.toml  requirements.txt  solvable-10x10-grid-solution  solvable-19x18-grid-solution  solvable-19x18-grid.out  solvable-20x20-grid.out  solvable-24x30-grid-solution  solvable-24x30-grid.out  tox.ini
data/grids/: solvable-10x10-grid.out  solvable-20x20-grid-solution  unsolvable-50x50-grid.out
gridworld/: agent.py  costs.py  database.py  direction.py  game.py  game_repo.py  grid.py  main.py  positions.py  stdcosts.py  terrain.py  web.py  wellness_solver.py
gridworld/data/grids/: unsolvable-16x16-grid.out
gridworld/tests/: test_agent.py  test_costs.py  test_database.py  test_direction.py  test_game.py  test_game_repo.py  test_grid.py  test_positions.py  test_stdcosts.py  test_terrain.py  test_web.py
scripts/: build  curl-get-all-games  curl-get-game-by-id  curl-get-game-status-by-id  curl-move-dir  curl-new-game  fmt  initialize  lint  pin_dep_versions  preflight_lite  run_mypy  run_tests  run_tests_with_tox
