# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gridworld"
version = "1.1.0"
requires-python = ">= 3.12"
dependencies = [
    "pytest",
    "flake8",
    "pytest-cov",
    "tox",
    "mypy",
    "black"
]
authors = [{name = "Richard W. Norton", email = "rwtnorton@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"

[project.scripts]
gridworld-cli = "gridworld.main:main"
